<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.my_final_project_application.Activity_Setting">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/setting"
        android:id="@+id/Title"
        android:gravity="center"
        android:textSize="40dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Title"
        android:id="@+id/KM"
        android:text="@string/km"
        android:textSize="35dp"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/KM"
        android:id="@+id/MILES"
        android:text="@string/miles"
        android:textSize="35dp"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MILES"
        android:id="@+id/Radius"
        android:text="@string/radius"
        android:textSize="35dp"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/RadiousNum"
        android:layout_alignBottom="@+id/Radius"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/Radius"
        android:layout_toEndOf="@+id/Radius"
        android:hint="@string/please_enter_the_radious" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:id="@+id/radio"
        android:layout_alignRight="@+id/RadiousNum"
        android:layout_alignEnd="@+id/RadiousNum"
        android:layout_below="@+id/Title"
        android:layout_toRightOf="@+id/KM"
        android:layout_toEndOf="@+id/MILES"
        android:layout_alignBottom="@+id/MILES">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:id="@+id/Km_radio_but" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/Miles_radio_but" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_setting"
        android:id="@+id/Save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="87dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

</RelativeLayout>
